refactor: implement order module improvements, add inventory management features, and apply database schema constraints.